Se simplificaron las rutas

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = mongodb+srv://Paladinez:Xy12345@cluster0.vhvbcg7.mongodb.net/ReconocimientoFacialDB?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI = mongodb+srv://adso:2669742@cluster0.vhvbcg7.mongodb.net/ReconocimientoFacialDB?retryWrites=true&w=majority&appName=Cluster0
+
